--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,11 +34,16 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/DuAn
 excludes=
 file.reference.flatlaf-3.1.1.jar=E:\\library\\flatlaf-3.1.1.jar
+file.reference.flatlaf-3.1.1.jar-1=C:\\Users\\Admin\\Downloads\\flatlaf-3.1.1.jar
 file.reference.jasperreports-xalan-7.0.0.jar=D:\\jasperreports-xalan-7.0.0.jar
+file.reference.jasperreports-xalan-7.0.0.jar-1=C:\\Users\\Admin\\Downloads\\jasperreports-xalan-7.0.0.jar
 file.reference.jcommon-1.0.23.jar=D:\\jcommon-1.0.23.jar
+file.reference.jcommon-1.0.23.jar-1=C:\\Users\\Admin\\Downloads\\jcommon-1.0.23.jar
 file.reference.jfreechart-1.0.19.jar=D:\\jfreechart-1.0.19.jar
+file.reference.jfreechart-1.0.19.jar-1=C:\\Users\\Admin\\Downloads\\jfreechart-1.0.19.jar
 file.reference.mssql-jdbc-12.2.0.jre11.jar=D:\\FPOLY 2023\\FPOLY 2023-25\\SUMMER 2024\\Block 2\\JAVA2_MOBI1024.02\\mssql-jdbc-12.2.0.jre11.jar
 file.reference.zxing.jar=D:\\zxing.jar
+file.reference.zxing.jar-1=C:\\Users\\Admin\\Downloads\\zxing.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -48,7 +53,12 @@ javac.classpath=\
     ${file.reference.jcommon-1.0.23.jar}:\
     ${file.reference.jfreechart-1.0.19.jar}:\
     ${file.reference.zxing.jar}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.flatlaf-3.1.1.jar-1}:\
+    ${file.reference.jasperreports-xalan-7.0.0.jar-1}:\
+    ${file.reference.jcommon-1.0.23.jar-1}:\
+    ${file.reference.jfreechart-1.0.19.jar-1}:\
+    ${file.reference.zxing.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
