--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -47,6 +47,7 @@ file.reference.jfreechart-1.0.19.jar=D:\\jfreechart-1.0.19.jar
 file.reference.jfreechart-1.0.19.jar-1=C:\\Users\\Admin\\Downloads\\jfreechart-1.0.19.jar
 file.reference.jfreechart-1.0.19.jar-2=D:\\library\\jfreechart-1.0.19.jar
 file.reference.mssql-jdbc-12.2.0.jre11.jar=D:\\FPOLY 2023\\FPOLY 2023-25\\SUMMER 2024\\Block 2\\JAVA2_MOBI1024.02\\mssql-jdbc-12.2.0.jre11.jar
+file.reference.mssql-jdbc-12.2.0.jre11.jar-1=C:\\Users\\Admin\\Downloads\\mssql-jdbc-12.2.0.jre11.jar
 file.reference.zxing.jar=D:\\zxing.jar
 file.reference.zxing.jar-1=C:\\Users\\Admin\\Downloads\\zxing.jar
 file.reference.zxing.jar-2=D:\\library\\zxing.jar
@@ -70,7 +71,8 @@ javac.classpath=\
     ${file.reference.jasperreports-xalan-7.0.0.jar-2}:\
     ${file.reference.jcommon-1.0.23.jar-2}:\
     ${file.reference.jfreechart-1.0.19.jar-2}:\
-    ${file.reference.zxing.jar-2}
+    ${file.reference.zxing.jar-2}:\
+    ${file.reference.mssql-jdbc-12.2.0.jre11.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
