--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,6 +36,9 @@ dist.jlink.output=${dist.jlink.dir}/DuAn
 endorsed.classpath=
 excludes=
 file.reference.-library=D:\\library
+file.reference.commons-codec-1.11.jar=C:\\Users\\Admin\\Documents\\Zalo Received Files\\thuvienpoi\\commons-codec-1.11.jar
+file.reference.commons-collections4-4.2.jar=C:\\Users\\Admin\\Documents\\Zalo Received Files\\thuvienpoi\\commons-collections4-4.2.jar
+file.reference.commons-compress-1.18.jar=C:\\Users\\Admin\\Documents\\Zalo Received Files\\thuvienpoi\\commons-compress-1.18.jar
 file.reference.flatlaf-3.1.1.jar=E:\\library\\flatlaf-3.1.1.jar
 file.reference.flatlaf-3.1.1.jar-1=C:\\Users\\Admin\\Downloads\\flatlaf-3.1.1.jar
 file.reference.flatlaf-3.1.1.jar-2=D:\\library\\flatlaf-3.1.1.jar
@@ -50,6 +53,10 @@ file.reference.jfreechart-1.0.19.jar-1=C:\\Users\\Admin\\Downloads\\jfreechart-1
 file.reference.jfreechart-1.0.19.jar-2=D:\\library\\jfreechart-1.0.19.jar
 file.reference.mssql-jdbc-12.2.0.jre11.jar=D:\\FPOLY 2023\\FPOLY 2023-25\\SUMMER 2024\\Block 2\\JAVA2_MOBI1024.02\\mssql-jdbc-12.2.0.jre11.jar
 file.reference.mssql-jdbc-12.2.0.jre11.jar-1=C:\\Users\\Admin\\Downloads\\mssql-jdbc-12.2.0.jre11.jar
+file.reference.poi-4.0.1.jar=C:\\Users\\Admin\\Documents\\Zalo Received Files\\thuvienpoi\\poi-4.0.1.jar
+file.reference.poi-ooxml-4.0.1.jar=C:\\Users\\Admin\\Documents\\Zalo Received Files\\thuvienpoi\\poi-ooxml-4.0.1.jar
+file.reference.poi-ooxml-schemas-4.0.1.jar=C:\\Users\\Admin\\Documents\\Zalo Received Files\\thuvienpoi\\poi-ooxml-schemas-4.0.1.jar
+file.reference.xmlbeans-3.0.2.jar=C:\\Users\\Admin\\Documents\\Zalo Received Files\\thuvienpoi\\xmlbeans-3.0.2.jar
 file.reference.zxing.jar=D:\\zxing.jar
 file.reference.zxing.jar-1=C:\\Users\\Admin\\Downloads\\zxing.jar
 file.reference.zxing.jar-2=D:\\library\\zxing.jar
@@ -74,7 +81,14 @@ javac.classpath=\
     ${file.reference.jcommon-1.0.23.jar-2}:\
     ${file.reference.jfreechart-1.0.19.jar-2}:\
     ${file.reference.zxing.jar-2}:\
-    ${file.reference.mssql-jdbc-12.2.0.jre11.jar-1}
+    ${file.reference.mssql-jdbc-12.2.0.jre11.jar-1}:\
+    ${file.reference.commons-codec-1.11.jar}:\
+    ${file.reference.commons-collections4-4.2.jar}:\
+    ${file.reference.commons-compress-1.18.jar}:\
+    ${file.reference.poi-4.0.1.jar}:\
+    ${file.reference.poi-ooxml-4.0.1.jar}:\
+    ${file.reference.poi-ooxml-schemas-4.0.1.jar}:\
+    ${file.reference.xmlbeans-3.0.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
