--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,27 +36,40 @@ dist.jlink.output=${dist.jlink.dir}/DuAn
 endorsed.classpath=
 excludes=
 file.reference.commons-8.0.2.jar=C:\\Users\\Admin\\Documents\\Zalo Received Files\\commons-8.0.2.jar
+file.reference.commons-codec-1.11.jar=E:\\DuAnBanLapTop\\thuvienpoi\\commons-codec-1.11.jar
 file.reference.commons-codec-1.15.jar=C:\\Users\\Admin\\Documents\\Zalo Received Files\\commons-codec-1.15.jar
+file.reference.commons-collections4-4.2.jar=E:\\DuAnBanLapTop\\thuvienpoi\\commons-collections4-4.2.jar
 file.reference.commons-collections4-4.4.jar=C:\\Users\\Admin\\Documents\\Zalo Received Files\\commons-collections4-4.4.jar
+file.reference.commons-compress-1.18.jar=E:\\DuAnBanLapTop\\thuvienpoi\\commons-compress-1.18.jar
 file.reference.commons-compress-1.20.jar=C:\\Users\\Admin\\Documents\\Zalo Received Files\\commons-compress-1.20.jar
 file.reference.commons-math3-3.6.1.jar=C:\\Users\\Admin\\Documents\\Zalo Received Files\\commons-math3-3.6.1.jar
+file.reference.flatlaf-3.1.1.jar=E:\\library\\flatlaf-3.1.1.jar
 file.reference.flatlaf-3.1.1.jar-1=C:\\Users\\Admin\\Downloads\\flatlaf-3.1.1.jar
 file.reference.flatlaf-3.4.1.jar=C:\\Users\\Admin\\Documents\\Zalo Received Files\\flatlaf-3.4.1.jar
 file.reference.flatlaf-extras-3.4.1.jar=C:\\Users\\Admin\\Documents\\Zalo Received Files\\flatlaf-extras-3.4.1.jar
+file.reference.jasperreports-xalan-7.0.0.jar=E:\\library\\jasperreports-xalan-7.0.0.jar
 file.reference.jasperreports-xalan-7.0.0.jar-1=C:\\Users\\Admin\\Downloads\\jasperreports-xalan-7.0.0.jar
 file.reference.javase-3.3.0.jar=C:\\Users\\Admin\\Documents\\Zalo Received Files\\javase-3.3.0.jar
+file.reference.jcommon-1.0.23.jar=E:\\library\\jcommon-1.0.23.jar
 file.reference.jcommon-1.0.23.jar-1=C:\\Users\\Admin\\Downloads\\jcommon-1.0.23.jar
+file.reference.jfreechart-1.0.19.jar=E:\\library\\jfreechart-1.0.19.jar
 file.reference.jfreechart-1.0.19.jar-1=C:\\Users\\Admin\\Downloads\\jfreechart-1.0.19.jar
 file.reference.mssql-jdbc-12.2.0.jre11.jar=C:\\Users\\Admin\\Downloads\\mssql-jdbc-12.2.0.jre11.jar
+file.reference.mssql-jdbc-12.2.0.jre11.jar-1=D:\\FPOLY 2023\\FPOLY 2023-25\\SUMMER 2024\\Block 2\\JAVA2_MOBI1024.02\\mssql-jdbc-12.2.0.jre11.jar
+file.reference.poi-4.0.1.jar=E:\\DuAnBanLapTop\\thuvienpoi\\poi-4.0.1.jar
 file.reference.poi-5.0.0.jar=C:\\Users\\Admin\\Documents\\Zalo Received Files\\poi-5.0.0.jar
 file.reference.poi-examples-5.0.0.jar=C:\\Users\\Admin\\Documents\\Zalo Received Files\\poi-examples-5.0.0.jar
 file.reference.poi-excelant-5.0.0.jar=C:\\Users\\Admin\\Documents\\Zalo Received Files\\poi-excelant-5.0.0.jar
 file.reference.poi-integration-5.0.0.jar=C:\\Users\\Admin\\Documents\\Zalo Received Files\\poi-integration-5.0.0.jar
+file.reference.poi-ooxml-4.0.1.jar=E:\\DuAnBanLapTop\\thuvienpoi\\poi-ooxml-4.0.1.jar
 file.reference.poi-ooxml-5.0.0.jar=C:\\Users\\Admin\\Documents\\Zalo Received Files\\poi-ooxml-5.0.0.jar
 file.reference.poi-ooxml-full-5.0.0.jar=C:\\Users\\Admin\\Documents\\Zalo Received Files\\poi-ooxml-full-5.0.0.jar
 file.reference.poi-ooxml-lite-5.0.0.jar=C:\\Users\\Admin\\Documents\\Zalo Received Files\\poi-ooxml-lite-5.0.0.jar
+file.reference.poi-ooxml-schemas-4.0.1.jar=E:\\DuAnBanLapTop\\thuvienpoi\\poi-ooxml-schemas-4.0.1.jar
 file.reference.poi-scratchpad-5.0.0.jar=C:\\Users\\Admin\\Documents\\Zalo Received Files\\poi-scratchpad-5.0.0.jar
+file.reference.xmlbeans-3.0.2.jar=E:\\DuAnBanLapTop\\thuvienpoi\\xmlbeans-3.0.2.jar
 file.reference.xmlbeans-4.0.0.jar=C:\\Users\\Admin\\Documents\\Zalo Received Files\\xmlbeans-4.0.0.jar
+file.reference.zxing.jar=E:\\library\\zxing.jar
 file.reference.zxing.jar-1=C:\\Users\\Admin\\Downloads\\zxing.jar
 includes=**
 jar.compress=false
@@ -84,7 +97,20 @@ javac.classpath=\
     ${file.reference.flatlaf-3.4.1.jar}:\
     ${file.reference.flatlaf-extras-3.4.1.jar}:\
     ${file.reference.javase-3.3.0.jar}:\
-    ${file.reference.mssql-jdbc-12.2.0.jre11.jar}
+    ${file.reference.mssql-jdbc-12.2.0.jre11.jar}:\
+    ${file.reference.commons-codec-1.11.jar}:\
+    ${file.reference.commons-collections4-4.2.jar}:\
+    ${file.reference.commons-compress-1.18.jar}:\
+    ${file.reference.poi-4.0.1.jar}:\
+    ${file.reference.poi-ooxml-4.0.1.jar}:\
+    ${file.reference.poi-ooxml-schemas-4.0.1.jar}:\
+    ${file.reference.xmlbeans-3.0.2.jar}:\
+    ${file.reference.flatlaf-3.1.1.jar}:\
+    ${file.reference.jasperreports-xalan-7.0.0.jar}:\
+    ${file.reference.jcommon-1.0.23.jar}:\
+    ${file.reference.jfreechart-1.0.19.jar}:\
+    ${file.reference.zxing.jar}:\
+    ${file.reference.mssql-jdbc-12.2.0.jre11.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
